...
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/buttonPsychologistProfileExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/button_exit"
                android:textColor="@color/white"
...
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/buttonRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/button_requests"
            android:textColor="@color/white"
            android:textSize="16sp"
...
