...
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/linearLayoutCurrentPsychologistNameSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textViewCurrentPsychologistNameSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="18sp"
...
