...
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonAssignTests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/button_confirm_test_assignment"
            android:textColor="@color/white"
            android:textSize="16sp"
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAssigningTests"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </ScrollView>
</LinearLayout>
