...
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/buttonAssignTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/button_assign_test"
        android:textColor="@color/white"
        android:textSize="16sp"
...
                android:background="@color/very_light_grey"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/imageViewAvailableTestMark"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/available_test_mark_content_description"
                    app:tint="@color/yellow"
                    app:srcCompat="@android:drawable/presence_online"
                    tools:ignore="Suspicious0dp"/>
...
